methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:5: error: value Red is not a member of object java.awt.Color
diagG(Color.Red);
            ^